# gf

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  example1.cpp
cmake/: FindLIBCURSES.cmake
include/: gf.h
src/: CMakeLists.txt  gf.cpp
